<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/homeiamge" />

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/homeTitleText"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="@dimen/titleSize" />

    <TextView
        android:id="@+id/homeScreenDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/baloo"
        android:lineSpacingExtra="10sp"
        android:text="@string/HomeScreenDescription"
        android:textAlignment="center" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="125dp"
        android:fontFamily="@font/baloo"
        android:text="@string/StartButton"
        android:textColor="@color/ButtonStartColor"
        android:textSize="@dimen/ButtonStartSize"
        app:cornerRadius="50dp" />

</LinearLayout>