<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Fragments.SocialMediaFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/baloo"
        android:text="@string/SupportLocal"
        android:textAlignment="center"
        android:textColor="@color/ButtonStartColor"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/boosterJuiceButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="300dp"
        android:elevation="30dp"
        android:fontFamily="@font/baloo"
        android:text="@string/BoosterJuiceTitle"
        android:textColor="@color/ButtonStartColor"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/nutrition519Button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="70dp"
        android:elevation="30dp"
        android:fontFamily="@font/baloo"
        android:text="@string/Nutrition519Title"
        android:textColor="@color/ButtonStartColor"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boosterJuiceButton" />

    <Button
        android:id="@+id/freshiiButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="70dp"
        android:elevation="30dp"
        android:fontFamily="@font/baloo"
        android:text="@string/FreshiiTitle"
        android:textColor="@color/ButtonStartColor"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutrition519Button" />

</androidx.constraintlayout.widget.ConstraintLayout>